change meta http-equiv

--- a/become-drive.html
+++ b/become-drive.html
@@ -5,7 +5,7 @@
 
   <meta charset="utf-8">
   <meta name="viewport" content="width=divice-width, initial-scale=1.0">
-  <meta http-eqiv="X-UA-Compatible" content="IE=edge">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="description" content="Trở thành tài xế của Dtaxi ngay hôm nay để nhận được công việc nhanh chóng vơi những lợi ích thiết thực nhất">
   <meta name="keywords" content="dtaxi, đầm sen, taxi, vận chuyển, di chuyển, gọi xe">
   <meta name="author" content="NEX">
