Almost done, wait for process

--- a/index.html
+++ b/index.html
@@ -15,11 +15,14 @@
 
 	<!-- The Stylesheets -->
 	<link rel="stylesheet" href="css/bootstrap.css" />
+	<link rel="stylesheet" href="css/animate.css" />
+	<link rel="stylesheet" href="css/font-awesome.css" />
+	<link rel="stylesheet" href="css/featherlight.min.css" />
 	<link rel="stylesheet" href="css/style.css" />
 	<link rel="stylesheet" href="css/mobile.css" />
-	<link rel="stylesheet" href="css/animate.css" />
 	<link rel="stylesheet" href="css/hover.css" />
-	<link rel="stylesheet" href="css/font-awesome.css" />
+
+
 
 	<!--[if IE]>
 		<script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script><![endif]-->
@@ -267,74 +270,76 @@
 
 	<!-- PROCESS AREA -->
 	<div id="process">
-		<div class="process container">
-			<div class="row">
-				<div class="col-lg-6 step">
-					<h1>ĐẶT XE</h1>
-					<div class="description">
-						Praesent gravida erat nec ante mollis con
-						Curabitur malesuada augue efficitur auctor
-						Phasellus faucibus quam vitae tincidun
-						Class aptent taciti sociosqu ad litora torqu
-						ent per conubia nostra, per inceptos hime
-						naeos. Donec id varius metus
-					</div>
-					<div class="img-bg">
-						<img src="images/process/1.png" alt="" class="img-responsive"/>
-					</div>
-				</div>
-			</div>
+		<div class="content">
+			<div class="news-list">
+				<div class="news-container">
 
-			<div class="row">
-				<div class="col-lg-6 step">
-					<h1>TÀI XẾ TỚI ĐÓN</h1>
-					<div class="description">
-						Praesent gravida erat nec ante mollis con
-						Curabitur malesuada augue efficitur auctor
-						Phasellus faucibus quam vitae tincidun
-						Class aptent taciti sociosqu ad litora torqu
-						ent per conubia nostra, per inceptos hime
-						naeos. Donec id varius metus
+					<div class="block">
+						<h1>ĐẶT XE</h1>
+						<div class="description">
+							Praesent gravida erat nec ante mollis con
+							Curabitur malesuada augue efficitur auctor
+							Phasellus faucibus quam vitae tincidun
+							Class aptent taciti sociosqu ad litora torqu
+							ent per conubia nostra, per inceptos hime
+							naeos. Donec id varius metus
+						</div>
+						<div class="img-bg">
+							<img src="images/process/1.png" alt="" class="img-responsive"/>
+						</div>
 					</div>
-					<div class="img-bg">
-						<img src="images/process/2.png" alt="" class="img-responsive"/>
-					</div>
-				</div>
-			</div>
 
-			<div class="row">
-				<div class="col-lg-6 step">
-					<h1>BẮT ĐẦU</h1>
-					<div class="description">
-						Praesent gravida erat nec ante mollis con
-						Curabitur malesuada augue efficitur auctor
-						Phasellus faucibus quam vitae tincidun
-						Class aptent taciti sociosqu ad litora torqu
-						ent per conubia nostra, per inceptos hime
-						naeos. Donec id varius metus
+					<div class="block">
+						<h1>ĐẶT XE</h1>
+						<div class="description">
+							Praesent gravida erat nec ante mollis con
+							Curabitur malesuada augue efficitur auctor
+							Phasellus faucibus quam vitae tincidun
+							Class aptent taciti sociosqu ad litora torqu
+							ent per conubia nostra, per inceptos hime
+							naeos. Donec id varius metus
+						</div>
+						<div class="img-bg">
+							<img src="images/process/2.png" alt="" class="img-responsive"/>
+						</div>
 					</div>
-					<div class="img-bg">
-						<img src="images/process/3.png" alt="" class="img-responsive"/>
-					</div>
-				</div>
-			</div>
 
-			<div class="row">
-				<div class="col-lg-6 step">
-					<h1>KẾT THÚC</h1>
-					<div class="description">
-						Praesent gravida erat nec ante mollis con
-						Curabitur malesuada augue efficitur auctor
-						Phasellus faucibus quam vitae tincidun
-						Class aptent taciti sociosqu ad litora torqu
-						ent per conubia nostra, per inceptos hime
-						naeos. Donec id varius metus
+					<div class="block">
+						<h1>ĐẶT XE</h1>
+						<div class="description">
+							Praesent gravida erat nec ante mollis con
+							Curabitur malesuada augue efficitur auctor
+							Phasellus faucibus quam vitae tincidun
+							Class aptent taciti sociosqu ad litora torqu
+							ent per conubia nostra, per inceptos hime
+							naeos. Donec id varius metus
+						</div>
+						<div class="img-bg">
+							<img src="images/process/3.png" alt="" class="img-responsive"/>
+						</div>
 					</div>
-					<div class="img-bg">
-						<img src="images/process/4.png" alt="" class="img-responsive"/>
+
+				</div>
+			</div><!-- end content -->
+
+			<div id="paralax">
+				<div id="phone">
+					<div class="content">
+						<div id="phone-paralax">
+							<div class="block first">
+								<img src="images/process/shopbrand_ios.jpg" alt="1" />
+							</div>
+							<div class="block second">
+								<img src="images/process/newsbrand_ios.jpg" alt="2" />
+							</div>
+							<div class="block third">
+								<img src="images/process/videobrand_ios.jpg" alt="3" />
+							</div>
+						</div>
 					</div>
 				</div>
-			</div>
+
+			</div><!-- end paralax -->
 
 		</div>
 	</div><!-- end screens -->
@@ -361,7 +366,7 @@
 
 			<div class="flex-wrapper">
 				<div class="item">
-					<a href="#">
+					<a href="#" data-featherlight="#news-1" data-featherlight-variant="fixwidth">
 						<div class="img">
 							<img src="images/news/1.png" alt="shit" />
 						</div>
@@ -380,7 +385,7 @@
 				</div>
 
 				<div class="item">
-					<a href="#">
+					<a href="#" data-featherlight="#news-2" data-featherlight-variant="fixwidth">
 						<div class="img">
 							<img src="images/news/2.png" alt="shit" />
 						</div>
@@ -399,7 +404,7 @@
 				</div>
 
 				<div class="item">
-					<a href="#">
+					<a href="#" data-featherlight="#news-3" data-featherlight-variant="fixwidth">
 						<div class="img">
 							<img src="images/news/3.png" alt="shit" />
 						</div>
@@ -418,7 +423,7 @@
 				</div>
 
 				<div class="item">
-					<a href="#">
+					<a href="#" data-featherlight="#news-4" data-featherlight-variant="fixwidth">
 						<div class="img">
 							<img src="images/news/4.png" alt="shit" />
 						</div>
@@ -437,7 +442,7 @@
 				</div>
 
 				<div class="item">
-					<a href="#">
+					<a href="#" data-featherlight="#news-5" data-featherlight-variant="fixwidth">
 						<div class="img">
 							<img src="images/news/5.png" alt="shit" />
 						</div>
@@ -456,7 +461,7 @@
 				</div>
 
 				<div class="item">
-					<a href="#">
+					<a href="#" data-featherlight="#news-6" data-featherlight-variant="fixwidth">
 						<div class="img">
 							<img src="images/news/6.png" alt="shit" />
 						</div>
@@ -476,14 +481,141 @@
 
 			</div>
 
+			<div id="news-1" class="news-content">
+				<img src="images/news/1.png" alt="" />
+				<span>TIN TỨC</span>
+				<h2>Aliquam erat volutpat</h2>
+				<hr>
+				<p>
+					Praesent sit amet risus in velit luctus consequat. Lorem ipsum dolor sit amet,
+					consectetur adipiscing elit. Nunc tincidunt neque non eros feugiat volutpat. Vivamus et
+					condimentum arcu, quis sagittis augue. Vivamus egestas lacus et urna porta, id porttitor nibh lacinia.
+					Proin lacus magna, commodo et laoreet ac, tempor bibendum magna. Ut rhoncus vehicula ligula,
+					eu tristique mauris convallis a. Nam ornare urna id tempus suscipit. Integer efficitur molestie
+					felis quis blandit. Fusce eu gravida ex.
+				</p>
+				<p>
+					Proin facilisis ac felis vel bibendum. Sed maximus erat at ex fringilla vulputate.
+					Nulla quis pretium sem. Phasellus pretium lacus at sapien faucibus, nec vulputate massa pellentesque.
+					Vivamus non posuere ante. Aenean molestie fermentum condimentum. Ut molestie sem eleifend laoreet euismod.
+					Donec pulvinar tortor ac ex ultrices vestibulum.
+				</p>
+			</div>
+
+			<div id="news-2" class="news-content">
+				<img src="images/news/2.png" alt="" />
+				<span>KHUYẾN MÃI</span>
+				<h2>Aliquam erat volutpat</h2>
+				<hr>
+				<p>
+					Praesent sit amet risus in velit luctus consequat. Lorem ipsum dolor sit amet,
+					consectetur adipiscing elit. Nunc tincidunt neque non eros feugiat volutpat. Vivamus et
+					condimentum arcu, quis sagittis augue. Vivamus egestas lacus et urna porta, id porttitor nibh lacinia.
+					Proin lacus magna, commodo et laoreet ac, tempor bibendum magna. Ut rhoncus vehicula ligula,
+					eu tristique mauris convallis a. Nam ornare urna id tempus suscipit. Integer efficitur molestie
+					felis quis blandit. Fusce eu gravida ex.
+				</p>
+				<p>
+					Proin facilisis ac felis vel bibendum. Sed maximus erat at ex fringilla vulputate.
+					Nulla quis pretium sem. Phasellus pretium lacus at sapien faucibus, nec vulputate massa pellentesque.
+					Vivamus non posuere ante. Aenean molestie fermentum condimentum. Ut molestie sem eleifend laoreet euismod.
+					Donec pulvinar tortor ac ex ultrices vestibulum.
+				</p>
+			</div>
+
+			<div id="news-3" class="news-content">
+				<img src="images/news/3.png" alt="" />
+				<span>TIN TỨC</span>
+				<h2>Aliquam erat volutpat</h2>
+				<hr>
+				<p>
+					Praesent sit amet risus in velit luctus consequat. Lorem ipsum dolor sit amet,
+					consectetur adipiscing elit. Nunc tincidunt neque non eros feugiat volutpat. Vivamus et
+					condimentum arcu, quis sagittis augue. Vivamus egestas lacus et urna porta, id porttitor nibh lacinia.
+					Proin lacus magna, commodo et laoreet ac, tempor bibendum magna. Ut rhoncus vehicula ligula,
+					eu tristique mauris convallis a. Nam ornare urna id tempus suscipit. Integer efficitur molestie
+					felis quis blandit. Fusce eu gravida ex.
+				</p>
+				<p>
+					Proin facilisis ac felis vel bibendum. Sed maximus erat at ex fringilla vulputate.
+					Nulla quis pretium sem. Phasellus pretium lacus at sapien faucibus, nec vulputate massa pellentesque.
+					Vivamus non posuere ante. Aenean molestie fermentum condimentum. Ut molestie sem eleifend laoreet euismod.
+					Donec pulvinar tortor ac ex ultrices vestibulum.
+				</p>
+			</div>
+
+			<div id="news-4" class="news-content">
+				<img src="images/news/4.png" alt="" />
+				<span>TIN TỨC</span>
+				<h2>Aliquam erat volutpat</h2>
+				<hr>
+				<p>
+					Praesent sit amet risus in velit luctus consequat. Lorem ipsum dolor sit amet,
+					consectetur adipiscing elit. Nunc tincidunt neque non eros feugiat volutpat. Vivamus et
+					condimentum arcu, quis sagittis augue. Vivamus egestas lacus et urna porta, id porttitor nibh lacinia.
+					Proin lacus magna, commodo et laoreet ac, tempor bibendum magna. Ut rhoncus vehicula ligula,
+					eu tristique mauris convallis a. Nam ornare urna id tempus suscipit. Integer efficitur molestie
+					felis quis blandit. Fusce eu gravida ex.
+				</p>
+				<p>
+					Proin facilisis ac felis vel bibendum. Sed maximus erat at ex fringilla vulputate.
+					Nulla quis pretium sem. Phasellus pretium lacus at sapien faucibus, nec vulputate massa pellentesque.
+					Vivamus non posuere ante. Aenean molestie fermentum condimentum. Ut molestie sem eleifend laoreet euismod.
+					Donec pulvinar tortor ac ex ultrices vestibulum.
+				</p>
+			</div>
+
+			<div id="news-5" class="news-content">
+				<img src="images/news/5.png" alt="" />
+				<span>KHUYẾN MÃI</span>
+				<h2>Aliquam erat volutpat</h2>
+				<hr>
+				<p>
+					Praesent sit amet risus in velit luctus consequat. Lorem ipsum dolor sit amet,
+					consectetur adipiscing elit. Nunc tincidunt neque non eros feugiat volutpat. Vivamus et
+					condimentum arcu, quis sagittis augue. Vivamus egestas lacus et urna porta, id porttitor nibh lacinia.
+					Proin lacus magna, commodo et laoreet ac, tempor bibendum magna. Ut rhoncus vehicula ligula,
+					eu tristique mauris convallis a. Nam ornare urna id tempus suscipit. Integer efficitur molestie
+					felis quis blandit. Fusce eu gravida ex.
+				</p>
+				<p>
+					Proin facilisis ac felis vel bibendum. Sed maximus erat at ex fringilla vulputate.
+					Nulla quis pretium sem. Phasellus pretium lacus at sapien faucibus, nec vulputate massa pellentesque.
+					Vivamus non posuere ante. Aenean molestie fermentum condimentum. Ut molestie sem eleifend laoreet euismod.
+					Donec pulvinar tortor ac ex ultrices vestibulum.
+				</p>
+			</div>
+
+			<div id="news-6" class="news-content">
+				<img src="images/news/6.png" alt="" />
+				<span>KHUYẾN MÃI</span>
+				<h2>Aliquam erat volutpat</h2>
+				<hr>
+				<p>
+					Praesent sit amet risus in velit luctus consequat. Lorem ipsum dolor sit amet,
+					consectetur adipiscing elit. Nunc tincidunt neque non eros feugiat volutpat. Vivamus et
+					condimentum arcu, quis sagittis augue. Vivamus egestas lacus et urna porta, id porttitor nibh lacinia.
+					Proin lacus magna, commodo et laoreet ac, tempor bibendum magna. Ut rhoncus vehicula ligula,
+					eu tristique mauris convallis a. Nam ornare urna id tempus suscipit. Integer efficitur molestie
+					felis quis blandit. Fusce eu gravida ex.
+				</p>
+				<p>
+					Proin facilisis ac felis vel bibendum. Sed maximus erat at ex fringilla vulputate.
+					Nulla quis pretium sem. Phasellus pretium lacus at sapien faucibus, nec vulputate massa pellentesque.
+					Vivamus non posuere ante. Aenean molestie fermentum condimentum. Ut molestie sem eleifend laoreet euismod.
+					Donec pulvinar tortor ac ex ultrices vestibulum.
+				</p>
+			</div>
+
+
 		</div><!-- end news container -->
 	</div><!-- end news -->
 	<!-- END NEWS AREA -->
 
 
 	<div id="unknown">
-		<div class="unknown container">
-			<div class="unknown-img"></div>
+		<div class="patches container">
+			<div class="patches-img"></div>
 			<h3>Hệ thống đánh giá Tài xế giúp Khách hàng lựa chọn Tài xế phù hợp</h3>
 		</div><!-- end unknown container -->
 	</div><!-- end unknown -->
@@ -598,9 +730,12 @@
 <script type="text/javascript" src="js/jquery.sequence.js"></script>
 <script type="text/javascript" src="js/hovers.js"></script>
 <script type="text/javascript" src="js/snap.svg-min.js"></script>
-<script type="text/javascript" src="js/main.js"></script>
 <script type="text/javascript" src="js/toucheffects.js"></script>
 <script type="text/javascript" src="js/bootstrap.min.js"></script>
+<script type="text/javascript" src="js/featherlight.min.js"></script>
+<script type="text/javascript" src="js/ScrollMagic.min.js"></script>
+<script type="text/javascript" src="js/paralaxScroll.js"></script>
+<script type="text/javascript" src="js/main.js"></script>
 <script src="https://maps.googleapis.com/maps/api/js?v=3.exp&amp;sensor=false"></script>
 
 <script type="text/javascript">
