Code done, waiting for content

--- a/index.html
+++ b/index.html
@@ -275,47 +275,50 @@
 				<div class="news-container">
 
 					<div class="block">
-						<h1>ĐẶT XE</h1>
-						<div class="description">
-							Praesent gravida erat nec ante mollis con
-							Curabitur malesuada augue efficitur auctor
-							Phasellus faucibus quam vitae tincidun
-							Class aptent taciti sociosqu ad litora torqu
-							ent per conubia nostra, per inceptos hime
-							naeos. Donec id varius metus
-						</div>
-						<div class="img-bg">
-							<img src="images/process/1.png" alt="" class="img-responsive"/>
+						<div class="step">
+							<h1>ĐẶT XE</h1>
+							<div class="description">
+								Khách hàng điền thông tin điểm đón và điếm đến. Sau đó chọn loại xe theo nhu cầu.
+							</div>
+							<div class="img-bg">
+								<img src="images/process/1.png" alt="" class="img-responsive"/>
+							</div>
 						</div>
 					</div>
 
 					<div class="block">
-						<h1>ĐẶT XE</h1>
-						<div class="description">
-							Praesent gravida erat nec ante mollis con
-							Curabitur malesuada augue efficitur auctor
-							Phasellus faucibus quam vitae tincidun
-							Class aptent taciti sociosqu ad litora torqu
-							ent per conubia nostra, per inceptos hime
-							naeos. Donec id varius metus
-						</div>
-						<div class="img-bg">
-							<img src="images/process/2.png" alt="" class="img-responsive"/>
+						<div class="step">
+							<h1>ĐÓN KHÁCH</h1>
+							<div class="description">
+								Sau khi nhận thông tin của khách hàng, tài xế sẽ liên lạc với khách hàng xác nhận về thông tin hành trình và chạy đến điểm đón khách
+							</div>
+							<div class="img-bg">
+								<img src="images/process/2.png" alt="" class="img-responsive"/>
+							</div>
 						</div>
 					</div>
 
 					<div class="block">
-						<h1>ĐẶT XE</h1>
-						<div class="description">
-							Praesent gravida erat nec ante mollis con
-							Curabitur malesuada augue efficitur auctor
-							Phasellus faucibus quam vitae tincidun
-							Class aptent taciti sociosqu ad litora torqu
-							ent per conubia nostra, per inceptos hime
-							naeos. Donec id varius metus
+						<div class="step">
+							<h1>THỰC HIỆN HÀNH TRÌNH</h1>
+							<div class="description">
+								Tài xế đưa khách đến địa điểm theo yêu cầu.
+							</div>
+							<div class="img-bg">
+								<img src="images/process/3.png" alt="" class="img-responsive"/>
+							</div>
 						</div>
-						<div class="img-bg">
-							<img src="images/process/3.png" alt="" class="img-responsive"/>
+					</div>
+
+					<div class="block">
+						<div class="step">
+							<h1>ĐÁNH GIÁ</h1>
+							<div class="description">
+								Sau khi kết thúc hành trình, khách hàng sẽ tiến hành đánh giá chất lượng dịch vụ mà D­taxi cung cấp
+							</div>
+							<div class="img-bg">
+								<img src="images/process/4.png" alt="" class="img-responsive"/>
+							</div>
 						</div>
 					</div>
 
@@ -323,17 +326,40 @@
 			</div><!-- end content -->
 
 			<div id="paralax">
+				
+				<div id="notebook">
+					<div class="content">
+						<div id="notebook-paralax">
+							<div class="block first">
+								<img src="images/process/bg-1.png" alt="1" />
+							</div>
+							<div class="block second">
+								<img src="images/process/bg-2.png" alt="2" />
+							</div>
+							<div class="block third">
+								<img src="images/process/bg-3.png" alt="3" />
+							</div>
+							<div class="block fourth">
+								<img src="images/process/bg-4.png" alt="4" />
+							</div>
+						</div>
+					</div>
+				</div>
+
 				<div id="phone">
 					<div class="content">
 						<div id="phone-paralax">
 							<div class="block first">
-								<img src="images/process/shopbrand_ios.jpg" alt="1" />
+								<img src="images/process/STEP1.png" alt="1" />
 							</div>
 							<div class="block second">
-								<img src="images/process/newsbrand_ios.jpg" alt="2" />
+								<img src="images/process/STEP2.png" alt="2" />
 							</div>
 							<div class="block third">
-								<img src="images/process/videobrand_ios.jpg" alt="3" />
+								<img src="images/process/STEP3.png" alt="3" />
+							</div>
+							<div class="block fourth">
+								<img src="images/process/STEP4.png" alt="4" />
 							</div>
 						</div>
 					</div>
