Hide process section, add content

--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
 	<div id="intro">
 	<section class="ss-style-doublediagonal">
 			<div class="logo"><a href="#"><img src="images/logo.png" alt="logo"></a></div>
-			<div class="description animated bounceIn"><h2>Cùng Đi Taxi Thôi</h2></div>
+			<div class="description animated bounceIn"><h2>Nào Đi Thôi</h2></div>
 
 			<div id="sequence">
 				<img class="sequence-prev" src="images/slider/bt-prev.png" alt="Previous Frame" />
@@ -106,9 +106,9 @@
 						</div>
 						<br />
 							<ul>
-							<li>Thiết kế được chăm chút trong hàng trăm giờ để mang lại một trải nghiệm tinh tế và thuận tiện nhất cho người dùng.</li>
-							<li>Công nghệ định vị và phân tích dữ liệu theo thời gian thực giúp việc giao nhận trở nên nhanh chóng, tin cậy và chi phí thấp hơn bao giờ hết.</li>
-							<li>Khả năng mở rộng và kết nối không giới hạn cho phép bất kỳ ai có tham gia sử dụng.</li>
+							<li>Sản phẩm được đội ngũ thiết kế chăm chút qua hàng trăm giờ lao động nhằm mang lại trải nghiệm tinh tế và thuận tiện nhất cho người dùng.</li>
+							<li>Công nghệ định vị và phân tích dữ liệu theo thời gian thực giúp việc kết nối giữa tài xế và khách hàng trở nên nhanh chóng, chính xác.</li>
+							<li>Khả năng mở rộng và kết nối không giới hạn cho phép bất kỳ ai có thể tham gia sử dụng</li>
 							</ul>
 						</div>
 						<img class="model" src="images/slider/model1.png" alt="Model 1" />
@@ -129,7 +129,7 @@
 	<!-- PRESENTATION AREA-->
 	<div id="presentation">
 		<div class="presentation container">
-			 <h3>"Consectetur adipiscing elit fusce interdum lacus, eu porta sem vestibulum vel. Mauris molestie dui eu odio commodo, sed vulputate urna eleifend."</h3>
+			 <h3>"D­taxi biến smartphone của mỗi khách hàng trở thành một điểm đón xe đi động, giúp khách hàng tiết kiệm thời gian chờ đợi và chi phí hành trình đến mức tối đa"</h3>
 		</div><!-- end presentation container -->
 	</div><!-- end presentation -->
 	<!-- END PRESENTATION AREA -->
@@ -141,7 +141,7 @@
 				<div class="area-title">
 					<h2>Mô hình hoạt động</h2>
 				</div>
-				<p>Bằng cách kết nối những cá nhân có nhu cầu gửi hàng với những cá nhân có khả năng vận chuyển trong cộng đồng, chúng tôi tạo ra một mạng lưới rộng khắp để đáp ứng mọi nhu cầu về vận chuyển hàng hóa trên thị trường. </p>
+				<p>D­Taxi là ứng dụng trung gian kết nối giữa những cá nhân có nhu cầu di chuyển và những cá nhân có thể đáp ứng nhu cầu đó. D­taxi biến Smartphone của mỗi khách hàng trở thành một điểm đón xe đi động, giúp khách hàng tiết kiệm thời gian chờ đợi và chi phí hành trình đến mức tối đa.</p>
 
 				<div class="fast"><h3>Chuyên nghiệp</h3></div>
 				<div class="arrow-fast"><img src="images/arrow-fast.png" alt="fast" /></div>
@@ -263,7 +263,8 @@
 		<div class="rating container">
 			<div class="rating-img"></div>
 			<h3>Hơn <span class="font-bold">12.000 Khách hàng</span> đã đăng ký</h3>
-		</div><!-- end container -->
+		</div>
+		<!-- end container -->
 	</div><!-- end rating container -->
 	<!-- END RATING AREA -->
 
@@ -326,7 +327,7 @@
 			</div><!-- end content -->
 
 			<div id="paralax">
-				
+
 				<div id="notebook">
 					<div class="content">
 						<div id="notebook-paralax">
@@ -373,15 +374,16 @@
 
 
 	<!-- PATCHES AREA -->
-	<div id="patches">
+	<!-- <div id="patches">
 		<div class="patches container">
 			<div class="patches-img"></div>
 			<h3>Hệ thống đánh giá Tài xế giúp Khách hàng lựa chọn Tài xế phù hợp</h3>
-		</div><!-- end patches container -->
-	</div><!-- end patches -->
+		</div>
+	</div> -->
 	<!-- END PATCHES AREA -->
 
-	<div id="news">
+	<!-- NEWS AREA -->
+	<!-- <div id="news">
 		<div class="news container">
 			<div class="area-title">
 				<h2 class="font-bold">Tin Tức & Khuyến Mãi</h2>
@@ -634,8 +636,8 @@
 			</div>
 
 
-		</div><!-- end news container -->
-	</div><!-- end news -->
+		</div>
+	</div> -->
 	<!-- END NEWS AREA -->
 
 
@@ -660,10 +662,9 @@
 					<div class="benefit info-box">
 						<h4>Tham gia ngay để được:</h4>
 						<ul>
-						<li>Nhận được đơn hàng thường xuyên và phù hợp</li>
-						<li>Tăng thêm nguồn thu nhập nhanh chóng và hấp dẫn</li>
-						<li>Tích lũy điểm thưởng khi làm vượt mức quy định</li>
-						<li>Bảo vệ quyền lợi khi bị lừa đảo</li>
+						<li>Có mức thu nhập hàng tháng từ 30 triệu đồng</li>
+						<li>Sở hữu chiếc xe cá nhân cho riêng bạn</li>
+						<li>Có nguồn thu nhập ngoài giờ làm việc</li>
 						</ul>
 					</div>
 					<div class="register info-box">
@@ -708,7 +709,7 @@
 	<div id="contact">
 			<div class="contact-title">
 				<div class="logo-contact animated bounceIn"><a href="#"><img src="images/logo.png" alt="logo"></a></div>
-				<div class="animated bounceIn"><h2 class="font-bold">Cùng Đi Taxi Thôi</h2></div>
+				<div class="animated bounceIn"><h2 class="font-bold">Nào Đi Thôi</h2></div>
 			</div>
 
 			<div id="map">
