Fix line height, delete feature description

--- a/index.html
+++ b/index.html
@@ -94,8 +94,8 @@
 			<div class="description animated bounceIn"><h2>Nào Đi Thôi</h2></div>
 
 			<div id="sequence">
-				<img class="sequence-prev" src="images/slider/bt-prev.png" alt="Previous Frame" />
-				<img class="sequence-next" src="images/slider/bt-next.png" alt="Next Frame" />
+				<!-- <img class="sequence-prev" src="images/slider/bt-prev.png" alt="Previous Frame" />
+				<img class="sequence-next" src="images/slider/bt-next.png" alt="Next Frame" /> -->
 
 				<ul class="sequence-canvas">
 
@@ -129,7 +129,7 @@
 	<!-- PRESENTATION AREA-->
 	<div id="presentation">
 		<div class="presentation container">
-			 <h3>"D­taxi biến smartphone của mỗi khách hàng trở thành một điểm đón xe đi động, giúp khách hàng tiết kiệm thời gian chờ đợi và chi phí hành trình đến mức tối đa"</h3>
+			 <h3>"D­taxi biến smartphone của mỗi khách hàng trở thành một điểm đón xe đi động"</h3>
 		</div><!-- end presentation container -->
 	</div><!-- end presentation -->
 	<!-- END PRESENTATION AREA -->
@@ -186,9 +186,6 @@
 				<div class="area-title">
 					<h2 class="font-bold">Tính năng vượt trội</h2>
 				</div>
-				<p>
-				Vivamus rutrum tortor feugiat risus lacinia lobortis. Quisque commodo est at lacinia volutpat. Ut gravida metus ut neque bibendum, a finibus nibh bibendum. Suspendisse elit diam, aliquam nec egestas ut, luctus vel diam.
-				</p>
 
 			<div class="row">
 				<div class="main">
