Change slogan at tab name of browser

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Dtaxi - Cùng Đi Taxi Thôi</title>
+	<title>Dtaxi - Nào Đi Thôi</title>
 
 	<!-- The Meta -->
 	<meta charset="UTF-8">
