Change decscription in the head tab

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 	<meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<meta http-equiv="X-UA-Compatable" content="IE=edge">
-    <meta name="description" content="Dtaxi - Cùng Đi Taxi Thôi" />
+    <meta name="description" content="Dtaxi - Nào Đi Thôi" />
     <meta name="keywords" content="Dtaxi, gọi taxi, di chuyển, vận chuyển, đầm sen, nexx" />
     <meta name="author" content="NEX" />
 
