Adding content for features section

--- a/index.html
+++ b/index.html
@@ -192,61 +192,62 @@
 					<ul class="cbp-ig-grid">
 						<li>
 							<a href="#">
-								<span class="cbp-ig-icon"><img src="images/features/fea-1.png" alt="Đơn hàng quanh đây" /></span>
-								<h3 class="cbp-ig-title">Việc làm quanh đây</h3>
-								<span class="cbp-ig-category">Nhân viên nhận được thông tin về các địa điểm làm việc quanh vị trị hiện tại.</span>
+								<span class="cbp-ig-icon"><img src="images/features/fea-1.png" alt="Tìm quanh đây" /></span>
+								<h3 class="cbp-ig-title">Tìm quanh đây</h3>
+								<span class="cbp-ig-category">Hệ thống tự động kết nối khách hàng với tài xế gần nhất</span>
 							</a>
 						</li>
 						<li>
 							<a href="#">
-								<span class="cbp-ig-icon"><img src="images/features/fea-2.png" alt="Theo dõi đơn hàng" /></span>
-								<h3 class="cbp-ig-title">Theo dõi dịch vụ</h3>
-								<span class="cbp-ig-category">Theo dõi thông tin chung về các đơn hàng cũng như yều chi tiết của từng đơn hàng.</span>
+								<span class="cbp-ig-icon"><img src="images/features/fea-2.png" alt="Theo dõi hành trình" /></span>
+								<h3 class="cbp-ig-title">Theo dõi hành trình</h3>
+								<span class="cbp-ig-category">Giúp khách hàng theo dõi lộ trình di chuyển của mình một cách thuận tiện nhất</span>
 							</a>
 						</li>
 						<li>
 							<a href="#">
-								<span class="cbp-ig-icon"><img src="images/features/fea-3.png" alt="Nhắn tin" /></span>
-								<h3 class="cbp-ig-title">Liên lạc</h3>
-								<span class="cbp-ig-category">Kết nối liên lạc giữa người dùng và hệ thống, khách hàng và Nhân viên</span>
+								<span class="cbp-ig-icon"><img src="images/features/fea-3.png" alt="Thông tin chi tiết" /></span>
+								<h3 class="cbp-ig-title">Thông tin chi tiết</h3>
+								<span class="cbp-ig-category">Khách hàng có thể xem được thông tin về tài xế, số xe, giá cước ước tính của hành trình</span>
 							</a>
 						</li>
 						<li>
 							<a href="#">
-								<span class="cbp-ig-icon"><img src="images/features/fea-4.png" alt="Phân tích dữ liệu theo thời gian thực" /></span>
-								<h3 class="cbp-ig-title">Xếp hạng</h3>
-								<span class="cbp-ig-category">Bảng xếp hạng các Nhân viên có uy tín.</span>
+								<span class="cbp-ig-icon"><img src="images/features/fea-4.png" alt="Liên lạc với tài xế" /></span>
+								<h3 class="cbp-ig-title">Liên lạc với tài xế</h3>
+								<span class="cbp-ig-category">Giúp khách hàng liên lạc với tài xế thông qua một thao tác chọn</span>
 							</a>
 						</li>
 						<li>
 							<a href="#">
-								<span class="cbp-ig-icon"><img src="images/features/fea-5.png" alt="Hệ thống đánh giá" /></span>
-								<h3 class="cbp-ig-title">Hệ thống đánh giá</h3>
-								<span class="cbp-ig-category">Hệ thống đánh giá chất lượng dịch vụ được cung cấp bởi từng Nhân viên.</span>
+								<span class="cbp-ig-icon"><img src="images/features/fea-5.png" alt="Hệ thống thông báo" /></span>
+								<h3 class="cbp-ig-title">Hệ thống thông báo</h3>
+								<span class="cbp-ig-category">Âm thanh thông báo khi xe đến đón và khi kết thúc hành trình</span>
 							</a>
 						</li>
 						<li>
 							<a href="#">
 								<span class="cbp-ig-icon"><img src="images/features/fea-6.png" alt="Chia sẻ" /></span>
 								<h3 class="cbp-ig-title">Chia sẻ</h3>
-								<span class="cbp-ig-category">Dễ dàng chia sẽ qua mạng xã hội, tin nhắn để mời bạn bè tham gia và nhận được quyền lợi.</span>
-							</a>
-						</li>
-						<li class="text-box">
-							<a href="#">
-								<span class="cbp-ig-icon"><img src="images/features/fea-7.png" alt="Đa nền tảng" /></span>
-								<h3 class="cbp-ig-title">Đa nền tảng</h3>
-								<span class="cbp-ig-category">Ứng dụng được viết cho điện thoại sử dụng nền tảng iOS lẫn Android.</span>
-
+								<span class="cbp-ig-category">Chia sẻ với bạn bè để nhận các ưu đãi hấp dẫn</span>
 							</a>
 						</li>
 						<li>
 							<a href="#">
-								<span class="cbp-ig-icon"><img src="images/features/fea-8.png" alt="Hệ thống Cloud" /></span>
-								<h3 class="cbp-ig-title">Điện toán đám mây</h3>
-								<span class="cbp-ig-category">Luôn đảm bảo hệ thống hoạt động trơn tru và bảo mật.</span>
+								<span class="cbp-ig-icon"><img src="images/features/fea-7.png" alt="Quà tặng" /></span>
+								<h3 class="cbp-ig-title">Quà tặng</h3>
+								<span class="cbp-ig-category">Gift Voucher sẽ được gửi cho khách hàng vào những dịp đặc biệt</span>
 							</a>
 						</li>
+						<li class="text-box">
+							<a href="#">
+								<span class="cbp-ig-icon"><img src="images/features/fea-8.png" alt="Hệ thống đánh giá" /></span>
+								<h3 class="cbp-ig-title">Hệ thống đánh giá</h3>
+								<span class="cbp-ig-category">Giúp khách hàng đánh giá chất lượng dịch vụ sau mỗi chuyến đi</span>
+
+							</a>
+						</li>
+
 					</ul>
 				</div><!-- end main -->
 			</div><!-- end row -->
