Change images in process

--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@
 				<div class="arrow-free"><img src="images/arrow-free.png" alt="free"/></div>
 
 				<div class="device">
-					<div class="video-bg"><iframe style="border:0;" width="450" height="260" src="https://www.youtube.com/embed/hFDcoX7s6rE?autoplay=1" allowfullscreen></iframe></div>
+					<div class="video-bg"><iframe style="border:0;" width="450" height="260" src="images/phone-screen.png" allowfullscreen></iframe></div>
 				</div>
 
 		</div><!-- end container -->
@@ -721,7 +721,7 @@
 	<div class="contact-data">
 		<h2>CÔNG TY TNHH TRUYỀN THÔNG VÀ CÔNG NGHỆ SỐ NEXTSTEP</h2>
 		<div class="info-wrap">
-			<div><span class="contact-data-icons fa-phone"></span>&nbsp;&nbsp;&nbsp;<span>08 38 408 678</span></div>
+			<div><span class="contact-data-icons fa-phone"></span>&nbsp;&nbsp;&nbsp;<span>08 62 589 687</span></div>
 			<div><span class="contact-data-icons fa-globe"></span>&nbsp;&nbsp;&nbsp;<span>204 - 206 D2, Phường 25, Quận Bình Thạnh, TPHCM</span></div>
 			<div><span class="contact-data-icons fa-envelope"></span>&nbsp;&nbsp;&nbsp;<span>info@nexx.vn</span></div>
 		</div>
@@ -761,7 +761,7 @@
 <script type="text/javascript" src="js/ScrollMagic.min.js"></script>
 <script type="text/javascript" src="js/paralaxScroll.js"></script>
 <script type="text/javascript" src="js/main.js"></script>
-<script src="https://maps.googleapis.com/maps/api/js?v=3.exp&amp;sensor=false"></script>
+<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDUn6YEiCBRYjdYG2Wr6rPt0Ss7_Krx4mg&language=vi"></script>
 
 <script type="text/javascript">
 
@@ -897,6 +897,7 @@ var options = {
 	zoom: 15,
 	disableDefaultUI: false,
 	scrollwheel: false,
+	draggable: false,
 	mapTypeId: 'Dtaxi'
 
 };
