--- a/policy.html
+++ b/policy.html
@@ -140,10 +140,9 @@
         <img src="images/become/footer-logo.png" alt="GVN"/>
 
         <div class="info">
-            <h3>CÔNG TY TNH
-                H TRUYỀN THÔNG VÀ CÔNG NGHỆ SỐ NEXTSTEP</h3>
+            <h3>CÔNG TY TNHH TRUYỀN THÔNG VÀ CÔNG NGHỆ SỐ NEXTSTEP</h3>
             <h4>204 - 206 D2, Phường 25, Quận Bình Thạnh, TPHCM</h4>
-            <h4>08 88 11 06 07</h4>
+            <h4>08 62 589 687</h4>
             <h4>info@nexx.vn</h4>
         </div>
     </div>
